// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<EuiPanel>
  <EuiTitle
    size="xs"
  >
    <h5>
      <MemoizedFormattedMessage
        defaultMessage="Navigation"
        id="xpack.maps.mapSettingsPanel.navigationTitle"
      />
    </h5>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFormRow>
    <EuiSwitch
      checked={false}
      compressed={true}
      data-test-subj="autoFitToDataBoundsSwitch"
      label="Auto fit map to data bounds"
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
  <ValidatedDualRange
    allowEmptyRange={false}
    compressed={true}
    formRowDisplay="columnCompressed"
    fullWidth={false}
    label="Zoom range"
    max={24}
    min={0}
    onChange={[Function]}
    showInput="inputWithPopover"
    showLabels={true}
    showRange={true}
    value={
      Array [
        0,
        24,
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    label="Initial map location"
  >
    <EuiRadioGroup
      idSelected="LAST_SAVED_LOCATION"
      onChange={[Function]}
      options={
        Array [
          Object {
            "id": "LAST_SAVED_LOCATION",
            "label": "Map location at save",
          },
          Object {
            "id": "AUTO_FIT_TO_BOUNDS",
            "label": "Auto fit map to data bounds",
          },
          Object {
            "id": "FIXED_LOCATION",
            "label": "Fixed location",
          },
          Object {
            "id": "BROWSER_LOCATION",
            "label": "Browser location",
          },
        ]
      }
    />
  </EuiFormRow>
</EuiPanel>
`;

exports[`should render browser location form when initialLocation is BROWSER_LOCATION 1`] = `
<EuiPanel>
  <EuiTitle
    size="xs"
  >
    <h5>
      <MemoizedFormattedMessage
        defaultMessage="Navigation"
        id="xpack.maps.mapSettingsPanel.navigationTitle"
      />
    </h5>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFormRow>
    <EuiSwitch
      checked={false}
      compressed={true}
      data-test-subj="autoFitToDataBoundsSwitch"
      label="Auto fit map to data bounds"
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
  <ValidatedDualRange
    allowEmptyRange={false}
    compressed={true}
    formRowDisplay="columnCompressed"
    fullWidth={false}
    label="Zoom range"
    max={24}
    min={0}
    onChange={[Function]}
    showInput="inputWithPopover"
    showLabels={true}
    showRange={true}
    value={
      Array [
        0,
        24,
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    label="Initial map location"
  >
    <EuiRadioGroup
      idSelected="BROWSER_LOCATION"
      onChange={[Function]}
      options={
        Array [
          Object {
            "id": "LAST_SAVED_LOCATION",
            "label": "Map location at save",
          },
          Object {
            "id": "AUTO_FIT_TO_BOUNDS",
            "label": "Auto fit map to data bounds",
          },
          Object {
            "id": "FIXED_LOCATION",
            "label": "Fixed location",
          },
          Object {
            "id": "BROWSER_LOCATION",
            "label": "Browser location",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    display="columnCompressed"
    label="Initial zoom"
  >
    <ValidatedRange
      compressed={true}
      max={24}
      min={0}
      onChange={[Function]}
      showInput={true}
      showRange={true}
      step={1}
      value={2}
    />
  </EuiFormRow>
</EuiPanel>
`;

exports[`should render fixed location form when initialLocation is FIXED_LOCATION 1`] = `
<EuiPanel>
  <EuiTitle
    size="xs"
  >
    <h5>
      <MemoizedFormattedMessage
        defaultMessage="Navigation"
        id="xpack.maps.mapSettingsPanel.navigationTitle"
      />
    </h5>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFormRow>
    <EuiSwitch
      checked={false}
      compressed={true}
      data-test-subj="autoFitToDataBoundsSwitch"
      label="Auto fit map to data bounds"
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
  <ValidatedDualRange
    allowEmptyRange={false}
    compressed={true}
    formRowDisplay="columnCompressed"
    fullWidth={false}
    label="Zoom range"
    max={24}
    min={0}
    onChange={[Function]}
    showInput="inputWithPopover"
    showLabels={true}
    showRange={true}
    value={
      Array [
        0,
        24,
      ]
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiFormRow
    label="Initial map location"
  >
    <EuiRadioGroup
      idSelected="FIXED_LOCATION"
      onChange={[Function]}
      options={
        Array [
          Object {
            "id": "LAST_SAVED_LOCATION",
            "label": "Map location at save",
          },
          Object {
            "id": "AUTO_FIT_TO_BOUNDS",
            "label": "Auto fit map to data bounds",
          },
          Object {
            "id": "FIXED_LOCATION",
            "label": "Fixed location",
          },
          Object {
            "id": "BROWSER_LOCATION",
            "label": "Browser location",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    display="columnCompressed"
    label="Initial latitude"
  >
    <EuiFieldNumber
      compressed={true}
      onChange={[Function]}
      value={0}
    />
  </EuiFormRow>
  <EuiFormRow
    display="columnCompressed"
    label="Initial longitude"
  >
    <EuiFieldNumber
      compressed={true}
      onChange={[Function]}
      value={0}
    />
  </EuiFormRow>
  <EuiFormRow
    display="columnCompressed"
    label="Initial zoom"
  >
    <ValidatedRange
      compressed={true}
      max={24}
      min={0}
      onChange={[Function]}
      showInput={true}
      showRange={true}
      step={1}
      value={2}
    />
  </EuiFormRow>
  <EuiFlexGroup
    justifyContent="flexEnd"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButtonEmpty
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Set to current view"
          id="xpack.maps.mapSettingsPanel.useCurrentViewBtnLabel"
        />
      </EuiButtonEmpty>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;
